--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,7 @@
 #######################################
 #          Remapping/Binding          #
 #######################################
-
+#{{{
 #remap prefix key from Ctrl-b to Ctrl-a
 #-g option makes global change
 #I think line 3 here is needed for nested sessions, I'm following blindly here
@@ -24,30 +24,26 @@ bind-key -n C-h select-pane -L
 bind-key -n C-l select-pane -R
 bind-key -n C-k select-pane -U
 bind-key -n C-j select-pane -D
-#unbind corresponding arrow key moves
-unbind-key Up
-unbind-key Down
-unbind-key Left
-unbind-key Right
 
-#bind prefix Shift-<vim movement> to resize panes
-bind-key K resize-pane -U 3
-bind-key J resize-pane -D 3
-bind-key H resize-pane -L 5
-bind-key L resize-pane -R 5
+#easier pane resize with Alt-<vim movement>
+bind-key -n M-k resize-pane -U
+bind-key -n M-j resize-pane -D
+bind-key -n M-h resize-pane -L
+bind-key -n M-l resize-pane -R
 
-#easier window movement with Alt-<vim movement>
-bind-key -n M-h previous-window
-bind-key -n M-l next-window
+#bind C-Shift-<vim movement> to change windows
+bind-key -n C-H previous-window
+bind-key -n C-L next-window
 
 #ESC is killing my flow in vim
 #apparently tmux waits for esc seq
 set -s escape-time 0
+#}}}
 
 #######################################
 #             Status Bar              # 
 #######################################
-
+#{{{
 #set bg and fg colour scheme
 set-option -g status-bg magenta
 set-option -g status-fg white
@@ -57,14 +53,18 @@ set-option -g status-interval 3
 
 #make right side of status bar have git branch, batt, and time/date
 set-option -g status-right '#[fg=green,bold][[#(git branch) branch ]] #[fg=yellow,bold]#(cat /sys/class/power_supply/BAT0/capacity)% #[fg=cyan,bold]%m-%d %r'
+#}}}
 
 #######################################
 #           Miscellaneous             # 
 #######################################
-
+#{{{
 #prevent auto-renaming of windows, I want my names
 set-option -g allow-rename off
 
 #quick sourcing of this file '~.tmux.conf' for quick setting edits
 #second phrase prints message at status line to let me know it worked
 bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
+#}}}
+
+# vim: set foldmethod=marker:
