--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,22 +18,22 @@ bind-key C-a send-prefix
 bind-key v split-window -h
 bind-key h split-window -v
 
-#easier pane movement with Ctrl-<vim movement>
+#easier pane movement with Alt-<vim movement>
 #-n option says prefix is not needed
-bind-key -n C-h select-pane -L 
-bind-key -n C-l select-pane -R
-bind-key -n C-k select-pane -U
-bind-key -n C-j select-pane -D
+bind-key -n M-h select-pane -L 
+bind-key -n M-l select-pane -R
+bind-key -n M-k select-pane -U
+bind-key -n M-j select-pane -D
 
-#easier pane resize with Alt-<vim movement>
-bind-key -n M-k resize-pane -U
-bind-key -n M-j resize-pane -D
-bind-key -n M-h resize-pane -L
-bind-key -n M-l resize-pane -R
+#easier pane resize with Ctrl-<vim movement>
+bind-key -n C-k resize-pane -U
+bind-key -n C-j resize-pane -D
+bind-key -n C-h resize-pane -L
+bind-key -n C-l resize-pane -R
 
 #bind C-Shift-<vim movement> to change windows
-bind-key -n C-H previous-window
-bind-key -n C-L next-window
+bind-key -n M-H previous-window
+bind-key -n M-L next-window
 
 #ESC is killing my flow in vim
 #apparently tmux waits for esc seq
@@ -48,8 +48,8 @@ set -s escape-time 0
 set-option -g status-bg magenta
 set-option -g status-fg white
 
-#make status bar refresh every 3 seconds instead of 15
-set-option -g status-interval 3
+#make status bar refresh every 60 seconds instead of 15
+set-option -g status-interval 60
 
 #make right side of status bar have git branch, batt, and time/date
 set-option -g status-right '#[fg=green,bold][[#(git branch) branch ]] #[fg=yellow,bold]#(cat /sys/class/power_supply/BAT0/capacity)% #[fg=cyan,bold]%m-%d %r'
