--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,9 +35,21 @@ bind-key -n C-l resize-pane -R
 bind-key -n M-H previous-window
 bind-key -n M-L next-window
 
+#make vi key bindings in copy mode
+setw -g mode-keys vi
+unbind -t vi-copy r      ;       bind-key -t vi-copy r rectangle-toggle
+unbind -t vi-copy Space  ;       bind-key -t vi-copy v begin-selection
+unbind -t vi-copy Enter  ;       bind-key -t vi-copy y copy-selection
+
+#get rid of this mouse nonsense
+set-option -g mouse off
+
 #ESC is killing my flow in vim
 #apparently tmux waits for esc seq
 set -s escape-time 0
+
+#quick edit todo
+#bind-key e command-prompt -I
 #}}}
 
 #######################################
@@ -52,7 +64,9 @@ set-option -g status-fg white
 set-option -g status-interval 60
 
 #make right side of status bar have git branch, batt, and time/date
-set-option -g status-right '#[fg=green,bold][[#(git branch) branch ]] #[fg=yellow,bold]#(cat /sys/class/power_supply/BAT0/capacity)% #[fg=cyan,bold]%m-%d %r'
+set-option -g status-right '#[fg=yellow,bold]#(cat /sys/class/power_supply/BAT0/capacity)%  #[fg=green,bold]%m/%d  #[fg=cyan,bold]%I:%M %p'
+#[fg=green,bold][[#(git branch) branch ]] for git branch,
+#   I don't use git branching enough for this to make sense
 #}}}
 
 #######################################
