--- a/i3/config
+++ b/i3/config
@@ -36,8 +36,8 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher){{{
-#doesn't even work
-#bindsym $mod+d exec dmenu_run
+#doesn't even work - using rofi now ([q]uick launch)
+bindsym $mod+q exec rofi -show run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.}}}
@@ -95,16 +95,16 @@ bindsym $mod+a focus parent
 bindsym $mod+d focus child
 
 #define workspace vars
-set $workspace1 "1: "
+set $workspace1 "1: "
 set $workspace2 "2: "
-set $workspace3 "3: "
-set $workspace4 "4: "
-set $workspace5 "5: "
-set $workspace6 "6: "
-set $workspace7 "7: "
+set $workspace3 "3: "
+set $workspace4 "4: "
+set $workspace5 "5: "
+set $workspace6 "6: "
+set $workspace7 "7: "
 set $workspace8 "8: "
 set $workspace9 "9: "
-set $workspace10 "10: "
+set $workspace10 "10: "
 
 # switch to workspace
 bindsym $mod+1 workspace $workspace1
@@ -219,16 +219,23 @@ hide_edge_borders both
 no_focus [class="(?i)chromium"]
 #force web into workspace 2
 assign [class="(?i)chromium"] $workspace2
+#force weechat into workspace 4
+assign [class="(?i)weechat"] $workspace4
+#force music apps into workspace 5
+assign [class="(?i)cmus"] $workspace5
+assign [class="(?i)spotify"] $workspace5
+#force gaming apps into workspace 6
+assign [class="(?i)mgba"] $workspace6
 
 #open terminal at startup
-exec pantheon-terminal
+exec i3-sensible-terminal
 #open chrome at startup
 exec chromium-browser
 
 #lock screen with win+p (pause)
 bindsym $mod+p exec "~/.config/i3/mylock"
-#autolock after 5 untouched minutes
-exec_always xautolock -time 5 -locker "~/.config/i3/mylock"
+#autolock after 45 untouched minutes
+exec_always xautolock -time 45 -locker "~/.config/i3/mylock"
 #i3lock -i "/usr/share/backgrounds/elementaryos-default"
 #~/.config/i3/mylock
 
@@ -254,9 +261,9 @@ mouse_warping none
 popup_during_fullscreen smart
 
 #quickly return to previous workspace by "moving" to current workspace
-workspace_auto_back_and_forth yes
+#workspace_auto_back_and_forth yes
 #win-tab to cycle workspaces (just like windows)
-bindsym $mod+Tab workspace next
+bindsym $mod+Tab workspace back_and_forth
 
 #when app requests focus, notify as urgent and leave focus where it is
 focus_on_window_activation urgent
