--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,7 +64,7 @@ set-option -g status-fg white
 set-option -g status-interval 60
 
 #make right side of status bar have git branch, batt, and time/date
-set-option -g status-right '#[fg=yellow,bold]#(cat /sys/class/power_supply/BAT0/capacity)%  #[fg=green,bold]%m/%d  #[fg=cyan,bold]%I:%M %p'
+set-option -g status-right '#[fg=yellow,bold]#(cat /sys/class/power_supply/BAT0/capacity)% #[fg=white,bold]| #[fg=green,bold]%m/%d#[fg=white,bold] | #[fg=cyan,bold]%I:%M %p'
 #[fg=green,bold][[#(git branch) branch ]] for git branch,
 #   I don't use git branching enough for this to make sense
 #}}}
