--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:monospace 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left{{{
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -168,7 +168,7 @@ bindsym $mod+r mode "resize"
 bar
 {
     #enable font-awesome for cooler workspace numbering
-    font pango: FontAwesome 9
+    font pango: FontAwesome 10
 
     #set output at RH side of bar
     status_command i3status
@@ -176,8 +176,8 @@ bar
     tray_output none
     tray_padding 0
 
-    #hide bar unless urgent or $mod pressed
-    mode hide
+    #hide bar unless urgent or $mod pressed - sike show always
+    mode dock
     hidden_state hide
     modifier $mod
 
