sorry, it's been a while, a lot has probably changed.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,78 +7,87 @@
 #          Remapping/Binding          #
 #######################################
 #{{{
-#remap prefix key from Ctrl-b to Ctrl-a
-#-g option makes global change
-#I think line 3 here is needed for nested sessions, I'm following blindly here
-unbind-key C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+    #remap prefix key from Ctrl-b to Ctrl-a
+    #-g option makes global change
+    #I think line 3 here is needed for nested sessions, I'm following blindly here
+    unbind-key C-b
+    set-option -g prefix C-a
+    bind-key C-a send-prefix
 
-#better splitting than " and %
-bind-key v split-window -h
-bind-key h split-window -v
+    #open new windows after current, not at end
+    unbind-key c        ;       bind-key c new-window -a -t *
 
-#easier pane movement with Alt-<vim movement>
-#-n option says prefix is not needed
-bind-key -n M-h select-pane -L 
-bind-key -n M-l select-pane -R
-bind-key -n M-k select-pane -U
-bind-key -n M-j select-pane -D
+    #better splitting than " and %
+    bind-key v split-window -h
+    bind-key h split-window -v
 
-#easier pane resize with Ctrl-<vim movement>
-bind-key -n C-k resize-pane -U
-bind-key -n C-j resize-pane -D
-bind-key -n C-h resize-pane -L
-bind-key -n C-l resize-pane -R
+    #easier pane movement with Alt-<vim movement>
+    #-n option says prefix is not needed
+    bind-key -n M-h select-pane -L 
+    bind-key -n M-l select-pane -R
+    bind-key -n M-k select-pane -U
+    bind-key -n M-j select-pane -D
 
-#bind C-Shift-<vim movement> to change windows
-bind-key -n M-H previous-window
-bind-key -n M-L next-window
+    #easier pane resize with Ctrl-<vim movement>
+    bind-key -n C-k resize-pane -U
+    bind-key -n C-j resize-pane -D
+    bind-key -n C-h resize-pane -L
+    bind-key -n C-l resize-pane -R
 
-#make vi key bindings in copy mode
-setw -g mode-keys vi
-unbind -t vi-copy r      ;       bind-key -t vi-copy r rectangle-toggle
-unbind -t vi-copy Space  ;       bind-key -t vi-copy v begin-selection
-unbind -t vi-copy Enter  ;       bind-key -t vi-copy y copy-selection
+    #bind C-Shift-<vim movement> to change windows
+    bind-key -n M-H previous-window
+    bind-key -n M-L next-window
 
-#get rid of this mouse nonsense
-set-option -g mouse off
+    #make vi key bindings in copy mode
+    setw -g mode-keys vi
+    unbind -t vi-copy r      ;       bind-key -t vi-copy r rectangle-toggle
+    unbind -t vi-copy Space  ;       bind-key -t vi-copy v begin-selection
+    unbind -t vi-copy Enter  ;       bind-key -t vi-copy y copy-selection
 
-#ESC is killing my flow in vim
-#apparently tmux waits for esc seq
-set -s escape-time 0
+    #get rid of this mouse nonsense
+    set-option -g mouse off
 
-#quick edit todo
-#bind-key e command-prompt -I
+    #ESC is killing my flow in vim
+    #apparently tmux waits for esc seq
+    set -s escape-time 0
+
+    #quick edit todo
+    bind-key e new-window "vim .todo"
+    #quick sett window (adjust)
+    bind-key a new-window -n "sett" "sett"
+    #quick sleep
+    bind-key s run-shell "systemctl suspend"
+    #quick lock
+    #unbind-key l        ;       bind-key l detach-client \; run-shell "echo "EXIT""
 #}}}
 
 #######################################
 #             Status Bar              # 
 #######################################
 #{{{
-#set bg and fg colour scheme
-set-option -g status-bg magenta
-set-option -g status-fg white
+    #set bg and fg colour scheme
+    set-option -g status-bg magenta
+    set-option -g status-fg white
 
-#make status bar refresh every 60 seconds instead of 15
-set-option -g status-interval 60
+    #make status bar refresh every 60 seconds instead of 15
+    set-option -g status-interval 60
 
-#make right side of status bar have git branch, batt, and time/date
-set-option -g status-right '#[fg=yellow,bold]#(cat /sys/class/power_supply/BAT0/capacity)% #[fg=white,bold]| #[fg=green,bold]%m/%d#[fg=white,bold] | #[fg=cyan,bold]%I:%M %p'
-#[fg=green,bold][[#(git branch) branch ]] for git branch,
-#   I don't use git branching enough for this to make sense
+    #make right side of status bar have git branch, batt, and time/date
+    set-option -g status-right '#[fg=yellow,bold]#(cat /sys/class/power_supply/BAT0/capacity)% #[fg=white,bold]| #[fg=green,bold]%m/%d#[fg=white,bold] | #[fg=cyan,bold]%I:%M %p'
+    #[fg=green,bold][[#(git branch) branch ]] for git branch,
+    #   I don't use git branching enough for this to make sense
 #}}}
 
 #######################################
 #           Miscellaneous             # 
 #######################################
 #{{{
-#prevent auto-renaming of windows, I want my names
-set-option -g allow-rename off
+    #prevent auto-renaming of windows, I want my names
+    set-option -g allow-rename off
 
-#quick sourcing of this file '~.tmux.conf' for quick setting edits
-#second phrase prints message at status line to let me know it worked
-bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
+    #quick sourcing of this file '~.tmux.conf' for quick setting edits
+    #second phrase prints message at status line to let me know it worked
+    bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 #}}}
 
 # vim: set foldmethod=marker:
