more things, don't require things that aren't installed everywhere

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,8 +18,9 @@
     unbind-key c        ;       bind-key c new-window -a -t *
 
     #better splitting than " and %
-    bind-key v split-window -h
-    bind-key h split-window -v
+    #make panes open in current dir
+    bind-key v split-window -h -c '#{pane_current_path}'
+    bind-key h split-window -v -c '#{pane_current_path}'
 
     #easier pane movement with Alt-<vim movement>
     #-n option says prefix is not needed
