--- a/i3/config
+++ b/i3/config
@@ -36,8 +36,8 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher){{{
-#doesn't even work - using rofi now ([q]uick launch)
-bindsym $mod+q exec rofi -show run
+#doesn't even work - using rofi now ([o]pen)
+bindsym $mod+o exec rofi -show run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.}}}
@@ -85,14 +85,14 @@ bindsym $mod+e layout toggle split
 
 #who needs floating anyway{{{
 # toggle tiling / floating
-#bindsym $mod+Shift+space floating toggle
+bindsym $mod+Shift+space floating toggle
 # change focus between tiling / floating windows
 #bindsym $mod+space focus mode_toggle}}}
 
 # focus the parent container
-bindsym $mod+a focus parent
+#bindsym $mod+a focus parent
 # focus the child container
-bindsym $mod+d focus child
+#bindsym $mod+d focus child
 
 #define workspace vars
 set $workspace1 "1: "
@@ -135,7 +135,7 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exit
 
 # resize window (you can also use the mouse for that)
 mode "resize"
@@ -163,6 +163,13 @@ mode "resize"
 }
 bindsym $mod+r mode "resize"
 
+#ignoreall mode for complete i3 hotkey bypass
+mode " "
+{
+    bindsym $mod+Shift+q exec i3-nagbar -t warning -m "Nice Try!"
+
+    bindsym $mod+p exec "sudo systemctl suspend"
+}
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar
@@ -171,7 +178,8 @@ bar
     font pango: FontAwesome 10
 
     #set output at RH side of bar
-    status_command i3status
+    #force my config
+    status_command i3status -c ~/.config/i3/status/config
     #separator_symbol "|" - irrelevant when not using #staus_command i3status - JSON thing in /etc/i3 #suppress tray app icons
     tray_output none
     tray_padding 0
@@ -228,17 +236,19 @@ assign [class="(?i)spotify"] $workspace5
 #force gaming apps into workspace 6
 assign [class="(?i)mgba"] $workspace6
 
+#make my project test windows float
+for_window [title="OpenGL"] floating enable
+
 #open terminal at startup
 #exec i3-sensible-terminal
 #open chrome at startup
 #exec chromium-browser
 
 #lock screen with win+p (pause)
-bindsym $mod+p exec "~/.config/i3/mylock"
-#sleep with win+z (zzz)
+bindsym $mod+p mode " " ; exec "/home/oh/code/lock/check"
 #bindsym $mod+z exec i3-sensible-terminal -e "zzz; exit"
 #autolock after 45 untouched minutes
-exec_always xautolock -time 45 -locker "~/.config/i3/mylock"
+#exec_always xautolock -time 45 -locker "~/.config/i3/mylock"
 #i3lock -i "/usr/share/backgrounds/elementaryos-default"
 #~/.config/i3/mylock
 
@@ -273,6 +283,9 @@ bindsym $mod+Tab workspace back_and_forth
 
 #when app requests focus, notify as urgent and leave focus where it is
 focus_on_window_activation urgent
+
+#set bg
+exec_always "feh --no-fehbg --randomize --bg-fill '/home/oh/ktp/Backgrounds'"
 
 #do stuff with the scratchpad eventually
 #it sounds useful if I can think of uses
