--- a/i3/status/config
+++ b/i3/status/config
@@ -7,6 +7,7 @@
 # If the above line is not correctly displayed, fix your editor first!
 
 general {
+        output_format = none
         colors = true
         interval = 30
 }
@@ -15,12 +16,12 @@ general {
 #order += "disk /"
 #order += "run_watch DHCP"
 #order += "run_watch VPN"
-order += "wireless _first_"
+#order += "wireless _first_"
 #order += "ethernet _first_"
-order += "battery 0"
+#order += "battery 0"
 #order += "load"
 #order += "cpu_usage"
-order += "tztime local"
+#order += "tztime local"
 
 wireless _first_ {
         format_up = "%ip on {%essid}"
