--- a/i3/config
+++ b/i3/config
@@ -255,14 +255,14 @@ hide_edge_borders both
 
 #auto launch bindings
 bindsym $mod+F1 workspace $workspace1 ; exec "i3-sensible-terminal -e /home/oh/.config/i3/F1"
-bindsym $mod+F2 workspace $workspace2 ; exec "firefox-developer-edition"
+bindsym $mod+F2 workspace $workspace2 ; exec "firefox"
 bindsym $mod+F3 workspace $workspace3 ; exec "evince"
 bindsym $mod+F4 workspace $workspace4 ; exec "libreoffice"
 bindsym $mod+F5 workspace $workspace5 ; exec "discord"
 bindsym $mod+F6 workspace $workspace6 ; exec "eog"
 bindsym $mod+F7 workspace $workspace7 ; exec "i3-sensible-terminal -e htop"
 bindsym $mod+F8 workspace $workspace8 ; exec "gimp"
-bindsym $mod+F9 workspace $workspace9 ; exec "i3-sensible-terminal -e R -q"
+bindsym $mod+F9 workspace $workspace9 ; exec "i3-sensible-terminal -e python3 -q"
 bindsym $mod+F10 workspace $workspace10 ; exec "i3-sensible-terminal -e cmus" ; workspace back_and_forth
 #scrot with prntscrn
 #bindsym Print exec "scrot ~/ktp/tmp/scrot_%H-%M-%S_%m-%d-%Y.png -z -e 'eog $f'"
@@ -272,7 +272,7 @@ bindsym Print exec "scrot ~/ktp/tmp/scrot_%H-%M-%S_%m-%d-%Y.png -z"
 bindsym $mod+Print exec "scrot ~/ktp/tmp/scrot_%H-%M-%S_%m-%d-%Y.png -z"
 
 #force web into workspace 2
-assign [class="(?i)firefox-developer-edition"] $workspace2
+assign [class="(?i)firefox"] $workspace2
 #pdf stuff on workspace 3
 assign [class="(?i)evince"] $workspace3
 #office stuff on workspace 4
