--- a/i3/config
+++ b/i3/config
@@ -4,17 +4,6 @@ set $mod Mod4
 # is used in the bar {} block below.
 font pango:monospace 9
 
-# This font is widely installed, provides lots of unicode glyphs, right-to-left{{{
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
-
-# Before i3 v4.8, we used to recommend this one as the default:
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, its unicode glyph coverage is limited, the old
-# X core fonts rendering does not support right-to-left and this being a bitmap
-# font, it doesn’t scale on retina/hidpi displays.}}}
-
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
@@ -24,13 +13,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher){{{
-#doesn't even work - using rofi now ([o]pen)
 bindsym $mod+o exec rofi -show run
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.}}}
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
 #shift keys over 1 to match vim/tmux/everything
@@ -39,30 +22,12 @@ bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
 
-# alternatively, you can use the cursor keys:{{{
-#bindsym $mod+Left focus left
-#bindsym $mod+Down focus down
-#bindsym $mod+Up focus up
-#bindsym $mod+Right focus right}}}
 
 # move focused window
 bindsym $mod+Shift+h move left
 bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
-
-# alternatively, you can use the cursor keys:{{{
-#bindsym $mod+Shift+Left move left
-#bindsym $mod+Shift+Down move down
-#bindsym $mod+Shift+Up move up
-#bindsym $mod+Shift+Right move right}}}
-
-# split in horizontal orientation{{{
-#I think this is unnecessary because default
-#bindsym $mod+h split h}}}
-
-# split in vertical orientation
-# bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
@@ -77,74 +42,39 @@ bindsym $mod+Escape floating toggle
 # change focus between tiling / floating windows
 bindsym $mod+Shift+space focus mode_toggle
 
-# focus the parent container
-#bindsym $mod+a focus parent
-# focus the child container
-#bindsym $mod+d focus child
-
 #define workspace vars
 #terminal icon
-#set $workspace1 "1: &#xf120; Tmux"
 set $workspace1 "1: &#xf120;"
-#set $workspace1 "&#xf120;"
 #firefox icon
-#set $workspace2 "2: &#xf269; Web"
 set $workspace2 "2: &#xf269;"
-#set $workspace2 "&#xf269;"
 #pdf icon
-#set $workspace3 "3: &#xf1c1; Pdf"
 set $workspace3 "3: &#xf1c1;"
-#set $workspace3 "&#xf1c1;"
 #file(doc) icon
-#set $workspace4 "4: &#xf15c; Office"
 set $workspace4 "4: &#xf15c;"
-#set $workspace4 "&#xf15c;"
 #comment(chat) icon
-#set $workspace5 "5: &#xf0e6; Chat"
 set $workspace5 "5: &#xf11b;"
-#set $workspace5 "&#xf0e6;"
 #microchip icon
-#set $workspace6 "6: &#xf030; View"
 set $workspace6 "6: &#xf030;"
-#set $workspace6 "&#xf030;"
 #penguin icon
-#set $workspace7 "7: &#xf17c; Sys"
 set $workspace7 "7: &#xf17c;"
-#set $workspace7 "&#xf17c;"
 #paint brush icon
-#set $workspace8 "8: &#xf1fc; Art"
 set $workspace8 "8: &#xf1fc;"
-#set $workspace8 "&#xf1fc;"
 #calc icon
-#set $workspace9 "9: &#xf1ec; Calc"
 set $workspace9 "9: &#xf1ec;"
-#set $workspace9 "&#xf1ec;"
-#music icon
-#set $workspace10 "10: &#xf001; Music"
-set $workspace10 "10: &#xf001;"
-#set $workspace10 " &#xf001;"
+#spotify icon
+set $workspace10 "10: &#xf1bc;"
 
 # switch to workspace
 bindsym $mod+1 workspace $workspace1
-#; exec "feh --no-fehbg --bg-fill /home/oh/ktp/Backgrounds/1Origin_of_Symmetry.jpg"
 bindsym $mod+2 workspace $workspace2
-#; exec "feh --no-fehbg --bg-fill /home/oh/ktp/Backgrounds/1Torches.jpg"
 bindsym $mod+3 workspace $workspace3
-#; exec "feh --no-fehbg --bg-fill /home/oh/ktp/Backgrounds/1El_Pintor.jpg"
 bindsym $mod+4 workspace $workspace4
-#; exec "feh --no-fehbg --bg-fill /home/oh/ktp/Backgrounds/1Holy_Fire.jpg"
 bindsym $mod+5 workspace $workspace5
-#; exec "feh --no-fehbg --bg-fill /home/oh/ktp/Backgrounds/1I\'m_Wide_Awake_It\'s_Morning.jpg"
 bindsym $mod+6 workspace $workspace6
-#; exec "feh --no-fehbg --bg-fill /home/oh/ktp/Backgrounds/1OK_Computer.jpg"
 bindsym $mod+7 workspace $workspace7
-#; exec "feh --no-fehbg --bg-fill /home/oh/ktp/Backgrounds/1Chief_Whooligan.jpg"
 bindsym $mod+8 workspace $workspace8
-#; exec "feh --no-fehbg --bg-fill /home/oh/ktp/Backgrounds/1In_The_Aeroplane_Over_The_Sea.jpg"
 bindsym $mod+9 workspace $workspace9
-#; exec "feh --no-fehbg --bg-fill /home/oh/ktp/Backgrounds/1The_College_Dropout.jpg"
 bindsym $mod+0 workspace $workspace10
-#; exec "feh --no-fehbg --bg-fill /home/oh/ktp/Backgrounds/1Run_the_Jewels.jpg"
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $workspace1
@@ -163,7 +93,7 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session) - changed to ESC because I would bump
-bindsym $mod+Shift+Escape exec "echo 'STOPD' > /tmp/popupd" ; exit
+bindsym $mod+Shift+Escape exit
 
 # resize window (you can also use the mouse for that)
 mode "resize"
@@ -179,12 +109,6 @@ mode "resize"
         bindsym k resize shrink height 5 px or 5 ppt
         bindsym l resize grow width 5 px or 5 ppt
 
-        # same bindings, but for the arrow keys{{{
-        #bindsym Left resize shrink width 10 px or 10 ppt
-        #bindsym Down resize grow height 10 px or 10 ppt
-        #bindsym Up resize shrink height 10 px or 10 ppt
-        #bindsym Right resize grow width 10 px or 10 ppt}}}
-
         # back to normal: Enter or Escape
         #bindsym Return mode "default"
         bindsym Escape mode "default"
@@ -192,11 +116,11 @@ mode "resize"
 bindsym $mod+r mode "resize"
 
 #ignoreall mode for complete i3 hotkey bypass
-mode "&#xf023;"
+mode "na"
 {
     bindsym $mod+f fullscreen disable
-    bindsym $mod+p exec "/home/oh/code/dotfiles/scripts/zzz"
-    bindsym $mod+Shift+p exec "/home/oh/code/dotfiles/scripts/ZZZ"
+    bindsym $mod+p exec "sleep 3 && /home/oh/code/dotfiles/scripts/zzz"
+    # bindsym $mod+Shift+p exec "/home/oh/code/dotfiles/scripts/ZZZ"
 }
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -241,7 +165,7 @@ bar
     
         focused_workspace  #CCCCCC #CCCCCC #000000
         active_workspace   #CCCCCC #CCCCCC #000000
-        inactive_workspace #111111 #000000 #444444
+        inactive_workspace #111111 #000000 #888888
         urgent_workspace   #111111 #440000 #FFFFFF
         binding_mode       #111111 #440000 #FFFFFF
     }
@@ -262,14 +186,16 @@ bindsym $mod+F5 workspace $workspace5 ; exec "discord"
 bindsym $mod+F6 workspace $workspace6 ; exec "eog"
 bindsym $mod+F7 workspace $workspace7 ; exec "i3-sensible-terminal -e htop"
 bindsym $mod+F8 workspace $workspace8 ; exec "gimp"
-bindsym $mod+F9 workspace $workspace9 ; exec "i3-sensible-terminal -e python3 -q"
-bindsym $mod+F10 workspace $workspace10 ; exec "i3-sensible-terminal -e cmus" ; workspace back_and_forth
+bindsym $mod+F9 workspace $workspace9 ; exec "i3-sensible-terminal -e ipython --no-confirm-exit"
+bindsym $mod+F10 workspace $workspace10 ; exec "spotify"
 #scrot with prntscrn
-#bindsym Print exec "scrot ~/ktp/tmp/scrot_%H-%M-%S_%m-%d-%Y.png -z -e 'eog $f'"
-bindsym Print exec "scrot ~/ktp/tmp/scrot_%H-%M-%S_%m-%d-%Y.png -z"
+bindsym Print exec "scrot ~/ktp/tmp/scrot_%Y-%m-%d_%H-%M-%S.png -z"
 # in case I want the bar
-#bindsym $mod+Print exec "scrot ~/ktp/tmp/scrot_%H-%M-%S_%m-%d-%Y.png -z -e 'eog $f'"
-bindsym $mod+Print exec "scrot ~/ktp/tmp/scrot_%H-%M-%S_%m-%d-%Y.png -z"
+bindsym $mod+Print exec "scrot ~/ktp/tmp/scrot_%Y-%m-%d_%H-%M-%S.png -z"
+# Next Background
+bindsym $mod+n exec '/home/oh/code/dotfiles/scripts/bg_next'
+# Toggle Backgrounds
+bindsym $mod+Shift+n exec '/home/oh/code/dotfiles/scripts/bg_toggle'
 
 #force web into workspace 2
 assign [class="(?i)firefox-developer-edition"] $workspace2
@@ -290,6 +216,9 @@ assign [class="(?i)octave"] $workspace8
 #music on workspace 10
 assign [class="(?i)vlc"] $workspace8
 assign [class="(?i)audacity"] $workspace8
+assign [class="(?i)spotify"] $workspace8
+# Make OpenGL Dev windows floating
+for_window [title="^OGL$"] floating enable
 
 #open terminal at startup
 #exec i3-sensible-terminal
@@ -297,7 +226,7 @@ assign [class="(?i)audacity"] $workspace8
 #exec chromium-browser
 
 #lock screen with win+p (pause)
-bindsym $mod+p mode "&#xf023;" ; exec "/home/oh/code/lock/check"
+bindsym $mod+p exec "/home/oh/code/lock/check"
 #bindsym $mod+z exec i3-sensible-terminal -e "zzz; exit"
 #autolock after 45 untouched minutes
 #exec_always xautolock -time 45 -locker "~/.config/i3/mylock"
@@ -309,7 +238,7 @@ bindsym $mod+p mode "&#xf023;" ; exec "/home/oh/code/lock/check"
 #class                  border  backgr. text    indicator child_border
 client.focused          #CCCCCC #CCCCCC #000000 #2e9ef4   #285577
 client.focused_inactive #CCCCCC #CCCCCC #000000 #2e9ef4   #285577
-client.unfocused        #111111 #000000 #444444 #292d2e   #222222
+client.unfocused        #111111 #000000 #AAAAAA #292d2e   #222222
 client.urgent           #111111 #440000 #FFFFFF #900000   #900000
 client.placeholder      #111111 #440000 #FFFFFF #000000   #0c0c0c
 
@@ -317,9 +246,6 @@ client.background       #ffffff
 
 #prevent focus from changing when I bump mouse
 focus_follows_mouse no
-
-#get the mouse out of the way if needed
-#bindsym $mod+` exec "xdotool mousemove 1920 1080"
 
 #disable mouse warping, only for multiple screens
 #so pointless for now, but I wouldn't want it later
@@ -336,8 +262,8 @@ bindsym $mod+Tab workspace back_and_forth
 #when app requests focus, notify as urgent and leave focus where it is
 focus_on_window_activation urgent
 
-#set bg
-exec_always "feh --no-fehbg --bg-fill \"$(ls /home/oh/ktp/Backgrounds/1* | sort -R | head -1)\""
+#set blank bg
+exec_always '/home/oh/code/dotfiles/scripts/bg_blank'
 
 #do stuff with the scratchpad eventually
 #it sounds useful if I can think of uses
@@ -349,26 +275,25 @@ exec_always "feh --no-fehbg --bg-fill \"$(ls /home/oh/ktp/Backgrounds/1* | sort 
 #sticky means it ignores workspaces and "sticks" to screen
 bindsym $mod+space sticky toggle  
 #to stick floating window in top+left corner
-bindsym $mod+bracketleft move absolute position 0 0 ; resize set 456 384
+# bindsym $mod+bracketleft move absolute position 0 0 ; resize set 456 384
 #to stick floating window in top+right corner
-bindsym $mod+bracketright move absolute position 1420 0 ; resize set 500 384
+# bindsym $mod+bracketright move absolute position 1420 0 ; resize set 500 384
+# Scratchpad here and away
+bindsym $mod+bracketleft scratchpad show
+bindsym $mod+bracketright move scratchpad
 
-#specific placement of "popupd" windows
-for_window [title="popupd"] floating enable, move absolute position 16 8, sticky enable
-
-#cmus bindings with Mod(WIN) controls when not focused
-#controls
-bindsym $mod+z exec "cmus-remote --prev"
-# to refresh i3status if I use it in the future -- && pkill -USR1 i3status"
-bindsym $mod+x exec "cmus-remote --play"
-bindsym $mod+c exec "cmus-remote --pause"
-bindsym $mod+v exec "cmus-remote --stop"
-bindsym $mod+b exec "cmus-remote --next"
-#volume
-bindsym $mod+minus exec "cmus-remote --volume -2%"
-bindsym $mod+plus exec "cmus-remote --volume +2%"
-#trivial status info with popupd
-bindsym $mod+s exec "cmus-remote -C status | grep 'file' | rev | cut -d'/' -f1 | rev | cut -d'.' -f1 | head -c35 > /tmp/popupd"
-#script for now playing in i3_status is above in that section
+#multimedia bindings
+bindsym XF86AudioMute exec '/home/oh/code/dotfiles/scripts/mute'
+bindsym XF86AudioLowerVolume exec '/home/oh/code/dotfiles/scripts/lower_volume'
+bindsym XF86AudioRaiseVolume exec '/home/oh/code/dotfiles/scripts/raise_volume'
+# bindsym XF86AudioPrev exec 'cmus-remote --prev'
+# bindsym XF86AudioPlay exec 'cmus-remote --pause'
+# bindsym XF86AudioNext exec 'cmus-remote --next'
+#other fn+keys
+bindsym XF86MonBrightnessDown exec '/home/oh/code/dotfiles/scripts/lower_bl'
+bindsym XF86MonBrightnessUp exec '/home/oh/code/dotfiles/scripts/raise_bl'
+# toggles rfkill wifi bindsym (XF86WLAN ||) XF86RFKill exec '/dev/null'
+# Please make Caps Lock stop
+bindsym CapsLock exec '/usr/bin/false'
 
 # vim: set foldmethod=marker:
